--- a/ansible/hosts.yml
+++ b/ansible/hosts.yml
@@ -6,13 +6,21 @@ all:
 
   hosts:
     master-1:
-      ansible_host: 89.169.152.97
+      ansible_host: 89.169.145.131
+      ip: 10.0.10.29
+      access_ip: 10.0.10.29
     worker-1:
-      ansible_host: 89.169.150.227
+      ansible_host: 89.169.130.236
+      ip: 10.0.10.10
+      access_ip: 10.0.10.10
     worker-2:
-      ansible_host: 89.169.166.52
+      ansible_host: 51.250.30.91
+      ip: 10.0.20.30
+      access_ip: 10.0.20.30
     worker-3:
-      ansible_host: 51.250.40.137
+      ansible_host: 51.250.45.96
+      ip: 10.0.30.6
+      access_ip: 10.0.30.6
   children:
     kube_control_plane:
       hosts:
