--- a/ansible/hosts.yml
+++ b/ansible/hosts.yml
@@ -2,25 +2,28 @@
 all:
   vars:
     ansible_ssh_user: ubuntu
+    ansible_ssh_private_key_file: ~/.ssh/id_rsa
+    ansible_ssh_common_args: '-o ProxyCommand="ssh -W %h:%p -q -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no ubuntu@158.160.18.66 -i ~/.ssh/id_rsa"'
     become: true
+
 
   hosts:
     master-1:
-      ansible_host: 89.169.145.131
-      ip: 10.0.10.29
-      access_ip: 10.0.10.29
+      ansible_host: 10.0.10.32
+      ip: 10.0.10.32
+      access_ip: 10.0.10.32
     worker-1:
-      ansible_host: 89.169.130.236
-      ip: 10.0.10.10
-      access_ip: 10.0.10.10
+      ansible_host: 10.0.10.33
+      ip: 10.0.10.33
+      access_ip: 10.0.10.33
     worker-2:
-      ansible_host: 51.250.30.91
-      ip: 10.0.20.30
-      access_ip: 10.0.20.30
+      ansible_host: 10.0.20.23
+      ip: 10.0.20.23
+      access_ip: 10.0.20.23
     worker-3:
-      ansible_host: 51.250.45.96
-      ip: 10.0.30.6
-      access_ip: 10.0.30.6
+      ansible_host: 10.0.30.11
+      ip: 10.0.30.11
+      access_ip: 10.0.30.11
   children:
     kube_control_plane:
       hosts:
