--- a/ansible/install-k8s.yml
+++ b/ansible/install-k8s.yml
@@ -1,5 +1,5 @@
 ---
-- name: Prepare and install k8s
+- name: Prepare to install k8s
   ansible.builtin.import_playbook: prepare.yml
 
 - name: Install K8S
@@ -7,3 +7,6 @@
 
 - name: Copy config k8s
   ansible.builtin.import_playbook: finish-k8s.yml
+
+- name: Install grafana
+  ansible.builtin.import_playbook: monitoring.yml
