--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Create service account key file
       run: |
         mkdir -p ~/.ssh
-        echo -e "${{ secrets.SA_IAM_KEY }}" > ~/.ssh/sa-iam.json
+        printf '%s' "${{ secrets.SA_IAM_KEY }}" > ~/.ssh/sa-iam.json
 
     - name: Terraform Init
       run: terraform -chdir=terraform init
