--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -31,10 +31,15 @@ jobs:
         echo "${{ secrets.SA_IAM_KEY }}" | base64 --decode > ~/.ssh/sa-iam.json
 
     - name: Terraform Init
+      id: init
       run: terraform -chdir=terraform init
+      echo "tfinit=$(base64 tfinit)" >> $GITHUB_ENV
+      
 
     - name: Terraform Validate
+      id: validate
       run: terraform -chdir=terraform validate
+      echo "tfvalidate=$(base64 tfvalidate)" >> $GITHUB_ENV
 
     - name: Terraform Plan
       id: plan
@@ -43,4 +48,6 @@ jobs:
         echo "tfplan=$(base64 tfplan)" >> $GITHUB_ENV
     
     - name: Terraform Apply
+      id: apply
       run: terraform -chdir=terraform apply -auto-approve
+      echo "tfapply=$(base64 tfapply)" >> $GITHUB_ENV
