--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -4,9 +4,10 @@ on:
   push:
     branches:
       - main
+
 env:
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-  AWS_SECRET_ACCESS_KEY: ${{ secrets. AWS_SECRET_ACCESS_KEY}}
+  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
   TF_VAR_access_key: ${{ secrets.TF_VAR_access_key }}
   TF_VAR_secret_key: ${{ secrets.TF_VAR_secret_key }}
   TF_VAR_account_id: ${{ secrets.TF_VAR_account_id }}
@@ -32,23 +33,25 @@ jobs:
 
     - name: Terraform Init
       id: init
-      run: terraform -chdir=terraform init
-         
+      run: |
+        terraform -chdir=terraform init
+        echo "init_output=$(terraform -chdir=terraform output)" >> $GITHUB_ENV
 
     - name: Terraform Validate
       id: validate
       run: |
-        terraform -chdir=terraform -out=tfvalidate validate
-        echo "tfvalidate=$(base64 tfvalidate)" >> $GITHUB_ENV
+        terraform -chdir=terraform validate
+        echo "validate_output=$(terraform -chdir=terraform output)" >> $GITHUB_ENV
 
     - name: Terraform Plan
       id: plan
       run: |
-        terraform -chdir=terraform -out=tfplan plan
+        terraform -chdir=terraform plan -out=tfplan
         echo "tfplan=$(base64 tfplan)" >> $GITHUB_ENV
-    
+        echo "plan_output=$(terraform -chdir=terraform output)" >> $GITHUB_ENV
+
     - name: Terraform Apply
       id: apply
       run: |
-        terraform -chdir=terraform apply -auto-approve -out=tfapply
-        echo "tfapply=$(base64 tfapply)" >> $GITHUB_ENV
+        terraform -chdir=terraform apply -auto-approve tfplan
+        echo "apply_output=$(terraform -chdir=terraform output)" >> $GITHUB_ENV
