--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -32,14 +32,18 @@ jobs:
         echo "${{ secrets.SA_IAM_KEY }}" | base64 --decode > ~/.ssh/sa-iam.json
 
     - name: Terraform Init
-      run: terraform -chdir=./terraform init
+      working-directory: ./terraform
+      run: terraform init
       
     - name: Terraform Validate
-      run: terraform -chdir=./terraform validate
+      working-directory: ./terraform
+      run: terraform validate
      
     - name: Terraform Plan
-      run: terraform -chdir=./terraform plan
+      working-directory: ./terraform
+      run: terraform plan
       
     - name: Terraform Apply
-      run: terraform -chdir=./terraform apply -auto-approve
+      working-directory: ./terraform
+      run: terraform -auto-approve
         
