--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -32,18 +32,18 @@ jobs:
         echo "${{ secrets.SA_IAM_KEY }}" | base64 --decode > ~/.ssh/sa-iam.json
 
     - name: Terraform Init
-      working-directory: ./terraform
+      working-directory: terraform
       run: terraform init
       
     - name: Terraform Validate
-      working-directory: ./terraform
+      working-directory: terraform
       run: terraform validate
      
     - name: Terraform Plan
-      working-directory: ./terraform
+      working-directory: terraform
       run: terraform plan
       
     - name: Terraform Apply
-      working-directory: ./terraform
+      working-directory: terraform
       run: terraform -auto-approve
         
