--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -45,7 +45,7 @@ jobs:
      
     - name: Terraform Plan
       working-directory: terraform
-      run: terraform destroy -auto-approve
+      run: terraform plan
       
     - name: Terraform Apply
       working-directory: terraform
