--- a/terraform/ansible.cfg
+++ b/terraform/ansible.cfg
@@ -1,3 +1,6 @@
 [defaults]
 library = ..ansible/kubespray/library
 roles_path = ../ansible/kubespray/roles
+
+[ssh_connection]
+SSHAgentForwarding=yes
