--- a/ansible/prepare.yml
+++ b/ansible/prepare.yml
@@ -26,3 +26,8 @@
       git:
         repo: https://github.com/kubernetes-sigs/kubespray.git
         dest: kubespray
+    
+    - name: Install requirements
+      pip:
+        requirements: ~/kubespray/requirements.txt
+        
