--- a/ansible/prepare.yml
+++ b/ansible/prepare.yml
@@ -22,7 +22,10 @@
 
   tasks:
 
-    
+   - name: Clone kubespay
+      git:
+        repo: https://github.com/kubernetes-sigs/kubespray.git
+        dest: ~/kubespray
     
     - name: Install requirements
       pip:
