--- a/ansible/install-k8s.yml
+++ b/ansible/install-k8s.yml
@@ -3,6 +3,7 @@
   hosts: localhost
   become: false
   gather_facts: false
+  tasks:
   - name: Clone kubespay
       git:
         repo: https://github.com/kubernetes-sigs/kubespray.git
