--- a/ansible/prepare.yml
+++ b/ansible/prepare.yml
@@ -11,9 +11,11 @@
 
   # tasks:
 
-  #   - name: Packages-update
-  #     ansible.builtin.apt:
-  #       update_cache: true
+     - name: Packages-update
+       ansible.builtin.apt:
+         name:
+           - python3-pip
+         update_cache: true
 
 - name: Prepare to install K8S
   hosts: localhost
