--- a/ansible/prepare.yml
+++ b/ansible/prepare.yml
@@ -14,16 +14,10 @@
        ansible.builtin.apt:
          name:
            - python3-pip
+         state: present
          update_cache: true
+     - name: Install requirements
+       pip:
+         requirements: https://github.com/kubernetes-sigs/kubespray/blob/master/requirements.txt
+         
 
-- name: Prepare to install K8S
-  hosts: localhost
-  become: false
-  gather_facts: false
-
-  tasks:
-    
-    - name: Install requirements
-      pip:
-        requirements: ~/kubespray/requirements.txt
-        
