--- a/ansible/prepare.yml
+++ b/ansible/prepare.yml
@@ -14,8 +14,10 @@
        ansible.builtin.apt:
          name:
            - python3-pip
+           - ansible==2.17.0
          state: present
          update_cache: true
+         
      - name: Install requirements
        pip:
          requirements: https://github.com/kubernetes-sigs/kubespray/blob/master/requirements.txt
