--- a/ansible/prepare.yml
+++ b/ansible/prepare.yml
@@ -18,8 +18,8 @@
          state: present
          update_cache: true
          
-     - name: Install requirements
-       pip:
-         requirements: https://github.com/kubernetes-sigs/kubespray/blob/master/requirements.txt
+#     - name: Install requirements
+#       pip:
+#         requirements: https://github.com/kubernetes-sigs/kubespray/blob/master/requirements.txt
          
 
