--- a/ansible/prepare.yml
+++ b/ansible/prepare.yml
@@ -14,6 +14,7 @@
        ansible.builtin.apt:
          name:
            - python3-pip
+           - ansible-core==2.16.5
            
          state: present
          update_cache: true
