--- a/ansible/prepare.yml
+++ b/ansible/prepare.yml
@@ -14,10 +14,14 @@
        ansible.builtin.apt:
          name:
            - python3-pip
-           - ansible-core==2.16.5
-           
          state: present
          update_cache: true
+
+     - name: Install ansible-core
+       ansible.builtin.pip:
+         name:
+           - ansible-core==2.16.5
+         state: present
          
 #     - name: Install requirements
 #       pip:
