--- a/ansible/prepare.yml
+++ b/ansible/prepare.yml
@@ -25,6 +25,6 @@
          
      - name: Install requirements
        pip:
-         requirements: https://github.com/kubernetes-sigs/kubespray/blob/master/requirements.txt
+         requirements: "https://github.com/kubernetes-sigs/kubespray/blob/master/requirements.txt"
          
 
