--- a/ansible/prepare.yml
+++ b/ansible/prepare.yml
@@ -9,13 +9,13 @@
       ansible.builtin.wait_for_connection:
         timeout: 300
 
-  tasks:
-     - name: Packages-update
-       ansible.builtin.apt:
-         name:
-           - python3-pip
-         state: present
-         update_cache: true
+#  tasks:
+#     - name: Packages-update
+#       ansible.builtin.apt:
+#         name:
+#           - python3-pip
+#         state: present
+#         update_cache: true
 
 #     - name: Install ansible-core
 #       ansible.builtin.pip:
