--- a/ansible/prepare.yml
+++ b/ansible/prepare.yml
@@ -9,28 +9,29 @@
       ansible.builtin.wait_for_connection:
         timeout: 300
 
-#  tasks:
-#     - name: Packages-update
-#       ansible.builtin.apt:
-#         name:
-#           - python3-pip
-#         state: present
-#         update_cache: true
+  tasks:
+     - name: Packages-update
+       ansible.builtin.apt:
+         name:
+           - python3-pip
+         state: present
+         update_cache: true
 
-#     - name: Install ansible-core
+#     - name: Install requirements
 #       ansible.builtin.pip:
 #         name:
-#           - ansible==9.8.0
-#         state: present
+#           - 
+#        state: present
 
 
- #    - name: Copy requirements
- #      ansible.builtin.copy:
- #        src: ~/kubespray/requirements.txt
- #        dest: ~/requirements.txt
+     - name: Copy requirements
+       ansible.builtin.copy:
+         src: ~/kubespray/requirements.txt
+         dest: ~/requirements.txt
+         mode: '0644'
          
- #    - name: Install requirements
- #      pip:
- #        requirements: ~/requirements.txt"
+     - name: Install requirements
+       pip:
+         requirements: ~/requirements.txt"
          
 
