--- a/ansible/prepare.yml
+++ b/ansible/prepare.yml
@@ -13,6 +13,7 @@
      - name: Packages-update
        ansible.builtin.apt:
          name:
+           - git
            - python3-pip
          state: present
          update_cache: true
