--- a/ansible/install-k8s.yml
+++ b/ansible/install-k8s.yml
@@ -1,18 +1,4 @@
 ---
-# - name: Clone Kubespray
-#   hosts: localhost
-#   become: false
-#   gather_facts: false
-#   tasks:
-#     - name: Clone Kubespray
-#       git:
-#         repo: https://github.com/kubernetes-sigs/kubespray.git
-#         dest: ~/kubespray
-
-#     - name: Install requirements
-#       pip:
-#         requirements: "~/kubespray/requirements.txt"
-
 - name: Prepare to install k8s
   ansible.builtin.import_playbook: prepare.yml
  
@@ -24,3 +10,6 @@
 
 - name: Install grafana
   ansible.builtin.import_playbook: monitoring.yml
+
+- name: Deployment app
+  ansible.builtin.import_playbook: deploy-app.yml
