--- a/ansible/finish-k8s.yml
+++ b/ansible/finish-k8s.yml
@@ -2,7 +2,7 @@
   hosts: kube_control_plane
   become: true
   gather_facts: false
-
+  
   tasks:
     - name: Get user home directory
       getent:
@@ -15,11 +15,13 @@
         home_dir: "{{ user_info.ansible_facts.getent_passwd.ubuntu[4] }}"
 
 
-    - name: Make directory for K8S
+    - name: Make directory for depoy
       ansible.builtin.file:
         path: "{{ home_dir }}/.kube"
         state: directory
         mode: '0755'
+        owner: "{{ ansible_user }}"
+        group: "{{ ansible_user }}"
 
     - name: Copy config K8S
       ansible.builtin.copy:
@@ -28,3 +30,23 @@
         dest: "{{ home_dir }}/.kube/config"
         owner: "{{ ansible_user }}"
         group: "{{ ansible_user }}"
+    
+    - name: Make directory for K8S
+      ansible.builtin.file:
+        path: "{{ home_dir }}/k8s"
+        state: directory
+        mode: '0755'
+        owner: "{{ ansible_user }}"
+        group: "{{ ansible_user }}"
+
+    - name: Copy config K8S
+      ansible.builtin.copy:
+        src: "{{ item }}"
+        dest: "{{ home_dir }}/k8s/{{ item }}"
+        owner: "{{ ansible_user }}"
+        group: "{{ ansible_user }}"
+      with_items:
+        - "../k8s/app-deployment.yml"
+        - "../k8s/app-networkpolicy.yml"
+        - "../k8s/app-service.yml"
+        - "../k8s/tf_outputs.yml"
