--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,9 +1,12 @@
 name: Terraform CI/CD
 
 on:
-  push:
-    branches:
-      - main
+  workflow_dispatch:
+
+#on:
+#  push:
+#    branches:
+#      - main
 
 env:
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
