--- a/.github/workflows/Set-secret.yml
+++ b/.github/workflows/Set-secret.yml
@@ -1,20 +1,23 @@
-name: Transfer Secret
+name: Transfer Secrets
 
 on:
   workflow_dispatch:
 
 jobs:
-  transfer-secret:
+  transfer:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout source repo
-        uses: actions/checkout@v2
-        with:
-          repository: LexionN/devops-diplom-app
-          token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+      - name: Install GitHub CLI
+        run: |
+          sudo apt-get install gh
 
-      - name: Set secret in target repo
+      - name: Login to GitHub
+        env:
+          PAT: ${{ secrets.PERSONAL_ACCESS_TOKEN }}  # Ваш токен доступа
+        run: |
+          echo "$PAT" | gh auth login --with-token
+
+      - name: Set secret in another repository
         run: |
           SECRET_VALUE="TEST"
-          echo "${{ env.SECRET_VALUE }}" | gh secret set MY_REGISTRY_ID --repo LexionN/devops-diplom-app
+          gh secret set MY_REGISTRY_ID --body $env.SECRET_VALUE --repo LexionN/devops-diplom-app
