--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -63,6 +63,11 @@ jobs:
       working-directory: terraform
       run: terraform apply -auto-approve
 
+    - name: Get terraform output in yml
+      run: |
+        terraform output -json > tf_outputs.json
+        jq -r 'to_entries | map(.key + ": " + .value.value) | .[]' tf_outputs.json > ../k8s/tf_outputs.yml
+
     - name: Install GitHub CLI
       run: |
         sudo apt-get install gh
@@ -75,6 +80,6 @@ jobs:
 
     - name: Set secret in another repository
       run: |
-        my_registry_id=$(grep 'my_registry_id:' your_file.txt | cut -d ' ' -f 2)
+        my_registry_id=$(grep 'my_registry_id:'  ../k8s/tf_outputs.yml | cut -d ' ' -f 2)
         gh secret set MY_REGISTRY_ID --body $env.my_registry_id --repo LexionN/devops-diplom-app
        
