--- a/ansible/finish-k8s.yml
+++ b/ansible/finish-k8s.yml
@@ -50,3 +50,20 @@
         - "../k8s/app-networkpolicy.yml"
         - "../k8s/app-service.yml"
         - "../k8s/tf_outputs.yml"
+
+    - name: Copy file from remote machine to local machine
+      ansible.builtin.fetch:
+        src: "{{ home_dir }}/.kube/config"
+        dest: ~/kube-config
+        flat: yes
+
+- name: Prepage kubeconfig and push to vars
+  hosts: localhost
+  become: false
+  gather_facts: false
+  vars_files:
+  - ../k8s/tf_outputs.yml
+  tasks:
+    - name: Change server address
+      ansible.builtin.command:
+        cmd: 'sed -i -e "s|server:.*|server: {{ vars.K8S_address }}|" ~/kube-config'
