--- a/ansible/copy-config.yml
+++ b/ansible/copy-config.yml
@@ -1,7 +1,9 @@
-- name: Copy config K8S
+---
+- name: Depoy app
   hosts: kube_control_plane
+  gather_facts: no
   become: false
-  gather_facts: false
+  
   tasks:
     - name: Copy file from remote machine to local machine
       ansible.builtin.fetch:
