--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -87,6 +87,6 @@ jobs:
         K8S_address=$(grep 'K8S_address:'  k8s/tf_outputs.yml | cut -d ' ' -f 2)
         sed -i "s/127.0.0.1:6443/$K8S_address/g" k8s/kube-config
         kube_config=$(base64 < k8s/kube-config)
-
+        gh secret set KUBE_CONFIG --body $kube_config --repo LexionN/devops-diplom-app
    
        
