--- a/ansible/deploy-app.yml
+++ b/ansible/deploy-app.yml
@@ -1,13 +1,13 @@
 ---
 - name: Depoy app
   hosts: kube_control_plane
-  gather_facts: no
+  gather_facts: true
   become: false
   vars_files:
     - "registry_id.txt"
 
   tasks:
-  - name: Change registry 
+  - name: Change registry
     ansible.builtin.command:
       cmd: 'sed -i -e "s|image:.*|image: cr.yandex/{{ vars.my_registry_id }}/nginx:latest|" ~/k8s/app-deployment.yml'
 
@@ -18,5 +18,3 @@
       - "~/k8s/app-deployment.yml"
       - "~/k8s/app-networkpolicy.yml"
       - "~/k8s/app-service.yml"
-
-  
