--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,12 +1,9 @@
 name: Terraform CI/CD
 
 on:
-  workflow_dispatch:
-
-#on:
-#  push:
-#    branches:
-#      - main
+ push:
+   branches:
+     - main
 
 env:
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -43,13 +40,10 @@ jobs:
         chmod 600 ~/.ssh/id_rsa
         echo "${{ env.ANSIBLE_SSH_PUBLIC_KEY }}" > ~/.ssh/id_rsa.pub
         chmod 600 ~/.ssh/id_rsa.pub
-        
 
     - name: Terraform Init
       working-directory: terraform
       run: terraform init
-
-     
       
     - name: Terraform Validate
       working-directory: terraform
@@ -88,4 +82,3 @@ jobs:
         sed -i "s/127.0.0.1:6443/$K8S_address/g" k8s/kube-config
         kube_config=$(base64 < k8s/kube-config | tr -d '\n' | sed -e 's/^[ \t]*//' -e 's/[ \t]*$//')
         gh secret set KUBE_CONFIG --body $kube_config --repo LexionN/devops-diplom-app
-       
