--- a/ansible/finish-k8s.yml
+++ b/ansible/finish-k8s.yml
@@ -2,8 +2,8 @@
   hosts: kube_control_plane
   become: true
   gather_facts: false
-  
   tasks:
+
     - name: Get user home directory
       getent:
         database: passwd
@@ -13,7 +13,6 @@
     - name: Extract home directory from user_info
       set_fact:
         home_dir: "{{ user_info.ansible_facts.getent_passwd.ubuntu[4] }}"
-
 
     - name: Make directory for depoy
       ansible.builtin.file:
@@ -30,7 +29,7 @@
         dest: "{{ home_dir }}/.kube/config"
         owner: "{{ ansible_user }}"
         group: "{{ ansible_user }}"
-    
+
     - name: Make directory for K8S
       ansible.builtin.file:
         path: "{{ home_dir }}/k8s"
@@ -39,7 +38,7 @@
         owner: "{{ ansible_user }}"
         group: "{{ ansible_user }}"
 
-    - name: Copy config K8S
+    - name: Copy deployment app
       ansible.builtin.copy:
         src: "{{ item }}"
         dest: "{{ home_dir }}/k8s/{{ item }}"
@@ -49,11 +48,9 @@
         - "../k8s/app-deployment.yml"
         - "../k8s/app-networkpolicy.yml"
         - "../k8s/app-service.yml"
-        
 
     - name: Copy file from remote machine to local machine
       ansible.builtin.fetch:
         src: "{{ home_dir }}/.kube/config"
         dest: ../k8s/kube-config
-        flat: yes
-
+      flat: yes
